--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 <body>
 
   <header class="header">
-    <img src="images/logo.svg" alt="logo" class="header__logo ">
+    <img src="images/logo.svg" alt="logo" class="header__logo">
     <h1 class="heading__primary mt-l tc">
       <span class="heading__primary--main mb-s">A history of everything you copy</span>
       <span class="heading__primary--sub"> Clipboard allows you to track and organize everything you
@@ -31,50 +31,163 @@
     </div>
   </header>
 
+  <main role="main">
+
+    <section class="about">
+
+      <h2 class="heading__secondary about__heading ma tc">
+        <span class="heading__secondary--main">Keep track of your snippets</span>
+        <span class="heading__secondary--sub">
+          Clipboard instantly stores any item you copy in the cloud,
+          meaning you can access your snippets immediately on all your
+          devices. Our Mac and iOS apps will help you organize everything.
+        </span>
+      </h2>
+
+      <div class="about__picture-box about__picture-box--computer">
+        <img class="about__picture" src="images/image-computer.png" alt="computer image">
+      </div>
+
+      <div class="about__details">
+
+        <div class="card-box">
+          <h3 class="heading__tertiary">
+            <span class="heading__tertiary--main">Quick Search</span>
+            <span class="heading__tertiary--sub">Easily search your snippets by content, category, web address,
+              application, and more.</span>
+          </h3>
+        </div>
+
+        <div class="card-box">
+          <h3 class="heading__tertiary">
+            <span class="heading__tertiary--main"> iCloud Sync</span>
+            <span class="heading__tertiary--sub">Instantly saves and syncs snippets across all your devices.</span>
+          </h3>
+        </div>
+
+        <div class="card-box">
+          <h3 class="heading__tertiary">
+            <span class="heading__tertiary--main">Complete History</span>
+            <span class="heading__tertiary--sub">Retrieve any snippets from the first moment you started using the
+              app.</span>
+          </h3>
+        </div>
+
+
+      </div>
+
+      <h2 class="heading__secondary about__heading ma tc">
+        <span class="heading__secondary--main">Access Clipboard anywhere</span>
+        <span class="heading__secondary--sub">
+          Whether you’re on the go, or at your computer, you can access all your Clipboard
+          snippets in a few simple clicks.
+        </span>
+      </h2>
+
+      <div class="about__picture-box about__picture-box--device">
+        <img class="about__picture " src="images/image-devices.png" alt="devices image">
+      </div>
+
+    </section>
+
+    <section class="featurs">
+
+      <h2 class="heading__secondary mt-h tc">
+        <span class="heading__secondary--main">
+          Supercharge your workflow
+        </span>
+        <span class="heading__secondary--sub">
+          We’ve got the tools to boost your productivity.
+        </span>
+      </h2>
+
+      <div class="featurs__card featurs__card--details">
+        <div class="card-box tc">
+          <img class="features__photo" src="images/icon-blacklist.svg" alt="icon blacklist">
+          <h3 class="heading__tertiary">
+            <span class="heading__tertiary--main">Create blacklists</span>
+          </h3>
+          <p class="paragraph">Ensure sensitive information never makes its way to your clipboard by
+            excluding certain sources.</p>
+        </div>
+
+        <div class="card-box tc">
+          <img class="features__photo" src="images/icon-text.svg" alt="icon blacklist">
+          <h3 class="heading__tertiary">
+            <span class="heading__tertiary--main">Plain text snippets</span>
+          </h3>
+          <p class="paragraph">
+            Remove unwanted formatting from copied text for a consistent
+            look.
+          </p>
+        </div>
+
+        <div class="card-box tc">
+          <img class="features__photo" src="images/icon-preview.svg" alt="icon blacklist">
+          <h3 class="heading__tertiary">
+            <span class="heading__tertiary--main">Sneak preview</span>
+          </h3>
+          <p class="paragraph">Quick preview of all snippets on your Clipboard for easy access.</p>
+          
+        </div>
+      </div>
+
+      <div class="featurs__card featurs__card--social">
+        <div class="card-box tc">
+          <img class="featurs__photo" src="images/logo-google.png" alt="icon blacklist">
+        </div>
+        <div class="card-box tc">
+          <img class="featurs__photo" src="images/logo-ibm.png" alt="icon blacklist">
+        </div>
+        <div class="card-box tc">
+          <img class="featurs__photo" src="images/logo-microsoft.png" alt="icon blacklist">
+        </div>
+        <div class="card-box tc">
+          <img class="featurs__photo" src="images/logo-hp.png" alt="icon blacklist">
+        </div>
+        <div class="card-box tc">
+          <img class="featurs__photo" src="images/logo-vector-graphics.png" alt="icon blacklist">
+        </div>
+
+
+
+    </section>
 
 
 
 
+  </main>
+
+
+  <br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br>
   <!-- 
 
-  Keep track of your snippets
 
-  Clipboard instantly stores any item you copy in the cloud, 
-  meaning you can access your snippets immediately on all your 
-  devices. Our Mac and iOS apps will help you organize everything.
+  
 
-  Quick Search
 
-  Easily search your snippets by content, category, web address, application, and more.
 
-  iCloud Sync
+  
 
-  Instantly saves and syncs snippets across all your devices.
+  
 
-  Complete History
+  
 
-  Retrieve any snippets from the first moment you started using the app.
 
-  Access Clipboard anywhere
 
-  Whether you’re on the go, or at your computer, you can access all your Clipboard 
-  snippets in a few simple clicks.
 
-  Supercharge your workflow
+  
 
-  We’ve got the tools to boost your productivity.
 
-  Create blacklists
+  
 
-  Ensure sensitive information never makes its way to your clipboard by excluding certain sources.
+  
 
-  Plain text snippets
+  
 
-  Remove unwanted formatting from copied text for a consistent look.
+  
 
-  Sneak preview
-
-  Quick preview of all snippets on your Clipboard for easy access.
+  
 
   Clipboard for iOS and Mac OS
 
@@ -91,10 +204,6 @@
   Install Guide -->
 
   <footer>
-
-
-
-
 
     <!--   <p class="attribution">
       Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
