dowmload section added

--- a/index.html
+++ b/index.html
@@ -128,7 +128,7 @@
             <span class="heading__tertiary--main">Sneak preview</span>
           </h3>
           <p class="paragraph">Quick preview of all snippets on your Clipboard for easy access.</p>
-          
+
         </div>
       </div>
 
@@ -153,6 +153,22 @@
 
     </section>
 
+    <section class="download tc">
+
+      <h2 class="heading__secondary about__heading ma tc">
+        <span class="heading__secondary--main">Clipboard for iOS and Mac OS</span>
+        <span class="heading__secondary--sub">
+          Available for free on the App Store. Download for Mac or iOS, sync with iCloud
+          and you’re ready to start adding to your clipboard.
+        </span>
+      </h2>
+
+      <div class="btn-box btn-animate mt-h ">
+        <a href="#" class="btn btn--green mr-s">Download for iOS</a>
+        <a href="#" class="btn btn--blue ml-s">Download for Mac</a>
+      </div>
+
+    </section>
 
 
 
@@ -161,41 +177,6 @@
 
   <br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br>
   <!-- 
-
-
-  
-
-
-
-  
-
-  
-
-  
-
-
-
-
-  
-
-
-  
-
-  
-
-  
-
-  
-
-  
-
-  Clipboard for iOS and Mac OS
-
-  Available for free on the App Store. Download for Mac or iOS, sync with iCloud 
-  and you’re ready to start adding to your clipboard.
-
-  Download for iOS
-  Download for Mac
 
   FAQs
   Contact Us
