footer added and styled

--- a/index.html
+++ b/index.html
@@ -132,7 +132,7 @@
         </div>
       </div>
 
-      <div class="featurs__card featurs__card--social">
+      <div class="featurs__card featurs__card--brand">
         <div class="card-box tc">
           <img class="featurs__photo" src="images/logo-google.png" alt="icon blacklist">
         </div>
@@ -175,16 +175,64 @@
   </main>
 
 
-  <br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br>
   <!-- 
 
-  FAQs
-  Contact Us
-  Privacy Policy
-  Press Kit
-  Install Guide -->
+  
+  
+  
+  
+   -->
 
-  <footer>
+  <footer class="footer">
+
+    <img src="images/logo.svg" alt="" class="footer__logo">
+
+    <nav class="footer__nav">
+      <ul class="footer__list">
+        <li class="footer__item">
+          <a href="#" class="footer__link">
+            FAQs
+          </a>
+        </li>
+        <li class="footer__item">
+          <a href="#" class="footer__link">
+            Contact Us
+          </a>
+        </li>
+        <li class="footer__item">
+          <a href="#" class="footer__link">
+            Privacy Policy
+          </a>
+        </li>
+        <li class="footer__item">
+          <a href="#" class="footer__link">
+            Press Kit
+          </a>
+        </li>
+        <li class="footer__item">
+          <a href="#" class="footer__link">
+            Install Guide
+          </a>
+        </li>
+      </ul>
+    </nav>
+
+
+    <div class="footer__social">
+          <a href="#" class="footer__link">
+            <img src="images/icon-facebook.svg" alt="" class="footer__icon">
+          </a>
+          <a href="#" class="footer__link">
+            <img src="images/icon-twitter.svg" alt="" class="footer__icon">
+          </a>
+          <a href="#" class="footer__link">
+            <img src="images/icon-instagram.svg" alt="" class="footer__icon">
+          </a>
+    </div>
+
+
+
+
 
     <!--   <p class="attribution">
       Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
