css file compreesed and autoprefixer added

--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
 <body>
 
   <header class="header">
-    <img src="images/logo.svg" alt="logo" class="header__logo">
+    <img src="images/logo.svg" alt="the main logo of this page" class="header__logo">
     <h1 class="heading__primary mt-l tc">
       <span class="heading__primary--main mb-s">A history of everything you copy</span>
       <span class="heading__primary--sub ma"> Clipboard allows you to track and organize everything you
@@ -58,7 +58,7 @@
 
       <div class="about__picture-box about__picture-box--computer wow animate__fadeInLeft" data-wow-duration="2s"
         data-wow-offset="70">
-        <img class="about__picture ml-re" src="images/image-computer.png" alt="computer image">
+        <img class="about__picture ml-re" src="images/image-computer.png" alt="a computer that show usa the logo of page">
       </div>
 
       <div class="about__details  wow animate__fadeInUp" data-wow-duration="2s" data-wow-offset="70">
@@ -100,7 +100,7 @@
 
       <div class="about__picture-box about__picture-box--device wow animate__fadeInTopLeft" data-wow-duration="2s"
         data-wow-offset="70">
-        <img class="about__picture" src="images/image-devices.png" alt="devices image">
+        <img class="about__picture" src="images/image-devices.png" alt="two devices that show us the logo of the page">
       </div>
 
     </section>
@@ -118,7 +118,7 @@
 
       <div class="featurs__cards featurs__cards wow animate__flipInX" data-wow-duration="2s" data-wow-offset="70">
         <div class="card">
-          <img class="card__photo" src="images/icon-blacklist.svg" alt="icon blacklist">
+          <img class="card__photo" src="images/icon-blacklist.svg" alt="a blacklist icon">
           <h3 class="heading__tertiary">
             <span class="heading__tertiary--main">Create blacklists</span>
           </h3>
@@ -127,7 +127,7 @@
         </div>
 
         <div class="card">
-          <img class="card__photo" src="images/icon-text.svg" alt="icon blacklist">
+          <img class="card__photo" src="images/icon-text.svg" alt="a text icon">
           <h3 class="heading__tertiary">
             <span class="heading__tertiary--main">Plain text snippets</span>
           </h3>
@@ -138,7 +138,7 @@
         </div>
 
         <div class="card">
-          <img class="card__photo" src="images/icon-preview.svg" alt="icon blacklist">
+          <img class="card__photo" src="images/icon-preview.svg" alt="an eye icon for preview">
           <h3 class="heading__tertiary">
             <span class="heading__tertiary--main">Sneak preview</span>
           </h3>
@@ -152,19 +152,19 @@
     <section class="brands  wow animate__backInLeft" data-wow-duration="1s" data-wow-offset="150">
       <div class="brands__cards">
         <div class="brands__logo--box">
-          <img class="brands__logo" src="images/logo-google.png" alt="icon blacklist">
+          <img class="brands__logo" src="images/logo-google.png" alt="lgoogle's logo">
         </div>
         <div class="brands__logo--box">
-          <img class="brands__logo" src="images/logo-ibm.png" alt="icon blacklist">
+          <img class="brands__logo" src="images/logo-ibm.png" alt="International Business Machines Corporation logo">
         </div>
         <div class="brands__logo--box">
-          <img class="brands__logo" src="images/logo-microsoft.png" alt="icon blacklist">
+          <img class="brands__logo" src="images/logo-microsoft.png" alt="microsoft's logo">
         </div>
         <div class="brands__logo--box">
-          <img class="brands__logo" src="images/logo-hp.png" alt="icon blacklist">
+          <img class="brands__logo" src="images/logo-hp.png" alt="hp's logo">
         </div>
         <div class="brands__logo--box">
-          <img class="brands__logo" src="images/logo-vector-graphics.png" alt="icon blacklist">
+          <img class="brands__logo" src="images/logo-vector-graphics.png" alt="vector graphics logo">
         </div>
       </div>
     </section>
@@ -199,7 +199,7 @@
 
   <footer class="footer wow animate__fadeInLeft" data-wow-duration="1s" data-wow-offset="20">
 
-    <img src="images/logo.svg" alt="" class="footer__logo">
+    <img src="images/logo.svg" alt="the main logo in the footer" class="footer__logo">
 
     <nav class="footer__nav">
       <ul class="footer__list">
@@ -234,13 +234,13 @@
 
     <div class="footer__social">
       <a href="#" class="footer__link">
-        <img src="images/icon-facebook.svg" alt="" class="footer__icon">
+        <img src="images/icon-facebook.svg" alt="facebook's logo" class="footer__icon">
       </a>
       <a href="#" class="footer__link">
-        <img src="images/icon-twitter.svg" alt="" class="footer__icon">
+        <img src="images/icon-twitter.svg" alt="twitter's logo" class="footer__icon">
       </a>
       <a href="#" class="footer__link">
-        <img src="images/icon-instagram.svg" alt="" class="footer__icon">
+        <img src="images/icon-instagram.svg" alt="instagram's logo" class="footer__icon">
       </a>
     </div>
 
@@ -250,11 +250,13 @@
       Coded by <a href="#">Your Name Here</a>.
     </p> -->
   </footer>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/wow/1.1.2/wow.min.js"></script>
+  <script>
+    new WOW().init();
+  </script>
+
 </body>
 
-<script src="https://cdnjs.cloudflare.com/ajax/libs/wow/1.1.2/wow.min.js"></script>
-<script>
-  new WOW().init();
-</script>
+
 
 </html>
